// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`alert single formatData formats non-reusable alert 1`] = `
{
  "alertSelection": "R",
  "blockReference": null,
  "entityId": 13070,
  "id": "0e71c5cd-a4e2-4dec-9b1e-0ef1c5666f65",
  "nonReusableRef": {
    "alertType": "info",
    "entityId": 13072,
    "heading": "Sample non-reusable alert",
    "id": "4eff76c1-5e3e-410b-a56a-64b572f98756",
    "paragraphs": [
      {
        "html": "<p>sample text</p>",
        "id": "2fc092f1-969a-4136-9039-4fc50a9f93c4",
        "type": "paragraph--wysiwyg",
      },
    ],
    "type": "paragraph--non_reusable_alert",
  },
  "type": "paragraph--alert_single",
}
`;

exports[`alert single formatData formats reusable alert 1`] = `
{
  "alertSelection": "R",
  "blockReference": {
    "alertType": "info",
    "content": {
      "html": "<p>sample text</p>",
      "id": "65fda9e9-1bbb-45f2-bc39-d3c659ba30d1",
      "type": "paragraph--wysiwyg",
    },
    "id": "ba9dd3f4-4260-4e21-bbf9-a5cf0db49fc1",
    "title": "You can still file a claim and apply for benefits during the alien invasion. Proof of humanity required.",
  },
  "entityId": 13070,
  "id": "0e71c5cd-a4e2-4dec-9b1e-0ef1c5666f65",
  "nonReusableRef": null,
  "type": "paragraph--alert_single",
}
`;
